--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1190,6 +1190,7 @@ regex = { version = "1.10.2" }
 relay-substrate-client = { path = "bridges/relays/client-substrate" }
 relay-utils = { path = "bridges/relays/utils" }
 remote-externalities = { path = "substrate/utils/frame/remote-externalities", default-features = false, package = "frame-remote-externalities" }
+revm = { version = "27.0.2", default-features = false }
 ripemd = { version = "0.1.3", default-features = false }
 rlp = { version = "0.6.1", default-features = false }
 rococo-emulated-chain = { path = "cumulus/parachains/integration-tests/emulated/chains/relays/rococo" }
@@ -1478,6 +1479,7 @@ zombienet-configuration = { version = "0.3.8" }
 zombienet-orchestrator = { version = "0.3.8" }
 zombienet-sdk = { version = "0.3.8" }
 zstd = { version = "0.12.4", default-features = false }
+
 
 [profile.release]
 # Polkadot runtime requires unwinding.
