--- a/.github/workflows/publish-check-compile.yml
+++ b/.github/workflows/publish-check-compile.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Checkout to merge base with master
         run: |
           git fetch origin ${{ github.base_ref}}
-          commit=$(git merge-base origin/${{ github.base_ref }} HEAD)
+          commit=$(git merge-base origin/${{ github.base_ref }} refs/remotes/pull/$GITHUB_REF_NAME/head)
           echo $commit
           #git checkout $commit
 
