--- a/.github/workflows/publish-check-compile.yml
+++ b/.github/workflows/publish-check-compile.yml
@@ -56,7 +56,7 @@ jobs:
         run: |
           mkdir prdoc/unstable
           mv prdoc/pr_*.prdoc prdoc/unstable
-          if [ -f $CURRENT_PRDOC ]
+          if [ -f $CURRENT_PRDOC ]; then
             mv $CURRENT_PRDOC prdoc
           fi
 
