--- a/polkadot/xcm/pallet-xcm/Cargo.toml
+++ b/polkadot/xcm/pallet-xcm/Cargo.toml
@@ -33,11 +33,11 @@ xcm-runtime-apis.workspace = true
 xcm.workspace = true
 
 [dev-dependencies]
-pallet-assets = { default-features = true, path = "../../../substrate/frame/assets" }
-polkadot-parachain-primitives = { default-features = true, path = "../../parachain" }
-polkadot-runtime-parachains = { default-features = true, path = "../../runtime/parachains" }
-sp-tracing = { features = ["test-utils"], default-features = true, path = "../../../substrate/primitives/tracing" }
-xcm-simulator = { default-features = true, path = "../xcm-simulator" }
+pallet-assets = { default-features = true, workspace = true }
+polkadot-parachain-primitives = { default-features = true, workspace = true }
+polkadot-runtime-parachains = { default-features = true, workspace = true }
+sp-tracing = { features = ["test-utils"], default-features = true, workspace = true }
+xcm-simulator = { default-features = true, workspace = true }
 
 [features]
 default = ["std"]
