--- a/polkadot/xcm/pallet-xcm/Cargo.toml
+++ b/polkadot/xcm/pallet-xcm/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pallet-xcm"
-version = "20.1.1"
+version = "20.1.2"
 description = "A pallet for handling XCM programs."
 authors.workspace = true
 edition.workspace = true
@@ -33,11 +33,11 @@ xcm-runtime-apis.workspace = true
 xcm.workspace = true
 
 [dev-dependencies]
-pallet-assets = { default-features = true, workspace = true }
-polkadot-parachain-primitives = { default-features = true, workspace = true }
-polkadot-runtime-parachains = { default-features = true, workspace = true }
-sp-tracing = { features = ["test-utils"], default-features = true, workspace = true }
-xcm-simulator = { default-features = true, workspace = true }
+pallet-assets = { default-features = true, path = "../../../substrate/frame/assets" }
+polkadot-parachain-primitives = { default-features = true, path = "../../parachain" }
+polkadot-runtime-parachains = { default-features = true, path = "../../runtime/parachains" }
+sp-tracing = { features = ["test-utils"], default-features = true, path = "../../../substrate/primitives/tracing" }
+xcm-simulator = { default-features = true, path = "../xcm-simulator" }
 
 [features]
 default = ["std"]
@@ -65,12 +65,9 @@ runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
 	"frame-support/runtime-benchmarks",
 	"frame-system/runtime-benchmarks",
-	"pallet-assets/runtime-benchmarks",
 	"pallet-balances/runtime-benchmarks",
 	"pallet-revive/runtime-benchmarks",
 	"pallet-timestamp/runtime-benchmarks",
-	"polkadot-parachain-primitives/runtime-benchmarks",
-	"polkadot-runtime-parachains/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 	"xcm-builder/runtime-benchmarks",
 	"xcm-executor/runtime-benchmarks",
@@ -81,10 +78,8 @@ test-utils = ["std"]
 try-runtime = [
 	"frame-support/try-runtime",
 	"frame-system/try-runtime",
-	"pallet-assets/try-runtime",
 	"pallet-balances/try-runtime",
 	"pallet-revive/try-runtime",
 	"pallet-timestamp/try-runtime",
-	"polkadot-runtime-parachains/try-runtime",
 	"sp-runtime/try-runtime",
 ]
