--- a/substrate/frame/staking-async/runtimes/rc/Cargo.toml
+++ b/substrate/frame/staking-async/runtimes/rc/Cargo.toml
@@ -279,6 +279,7 @@ runtime-benchmarks = [
 	"xcm-executor/runtime-benchmarks",
 	"xcm-runtime-apis/runtime-benchmarks",
 	"xcm/runtime-benchmarks",
+	"pallet-session/runtime-benchmarks"
 ]
 try-runtime = [
 	"frame-election-provider-support/try-runtime",
