--- a/substrate/frame/staking-async/ah-client/Cargo.toml
+++ b/substrate/frame/staking-async/ah-client/Cargo.toml
@@ -50,6 +50,7 @@ runtime-benchmarks = [
 	"pallet-staking-async-rc-client/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
 	"sp-staking/runtime-benchmarks",
+	"pallet-session/runtime-benchmarks"
 ]
 try-runtime = [
 	"frame-support/try-runtime",
