--- a/umbrella/Cargo.toml
+++ b/umbrella/Cargo.toml
@@ -319,6 +319,7 @@ runtime-benchmarks = [
 	"pallet-salary?/runtime-benchmarks",
 	"pallet-scheduler?/runtime-benchmarks",
 	"pallet-session-benchmarking?/runtime-benchmarks",
+	"pallet-session?/runtime-benchmarks",
 	"pallet-skip-feeless-payment?/runtime-benchmarks",
 	"pallet-society?/runtime-benchmarks",
 	"pallet-staking-async-ah-client?/runtime-benchmarks",
@@ -361,7 +362,6 @@ runtime-benchmarks = [
 	"staging-xcm-executor?/runtime-benchmarks",
 	"staging-xcm?/runtime-benchmarks",
 	"xcm-runtime-apis?/runtime-benchmarks",
-	"pallet-session?/runtime-benchmarks"
 ]
 try-runtime = [
 	"assets-common?/try-runtime",
