--- a/cumulus/pallets/session-benchmarking/Cargo.toml
+++ b/cumulus/pallets/session-benchmarking/Cargo.toml
@@ -29,8 +29,8 @@ runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
 	"frame-support/runtime-benchmarks",
 	"frame-system/runtime-benchmarks",
+	"pallet-session/runtime-benchmarks",
 	"sp-runtime/runtime-benchmarks",
-	"pallet-session/runtime-benchmarks"
 ]
 std = [
 	"codec/std",
