Revert "test checksemver fix"
This reverts commit 2938b7588836bde9758fedac44b3b8e50e50f084.

--- a/.github/workflows/check-semver.yml
+++ b/.github/workflows/check-semver.yml
@@ -78,9 +78,7 @@ jobs:
 
       - name: Install parity-publish
         # Set the target dir to cache the build.
-        run: |
-          # CARGO_TARGET_DIR=./target/ cargo install parity-publish@0.10.6 --locked -q
-          CARGO_TARGET_DIR=./target/ cargo install --git https://github.com/iulianbarbu/parity-publish.git --branch add-support-for-up-to-1.88
+        run: CARGO_TARGET_DIR=./target/ cargo install parity-publish@0.10.6 --locked -q
 
       - name: Get original PR number
         shell: bash
