--- a/.github/workflows/release-reusable-publish-packages.yml
+++ b/.github/workflows/release-reusable-publish-packages.yml
@@ -1,25 +1,37 @@
-name: Release - Publish polkadot deb package
+name: Reusable - Publish Package
 
 on:
-  workflow_dispatch:
+  workflow_call:
     inputs:
       tag:
-        description: Current final release tag in the format polkadot-stableYYMM or polkadot-stable-YYMM-X
-        default: polkadot-stable2412
+        description: Current final release tag (e.g., polkadot-stableYYMM)
         required: true
         type: string
-
       distribution:
-        description: Distribution where to publish deb package (release, staging, stable2407, etc)
-        default: staging
+        description: Distribution where to publish package (e.g., release, staging)
         required: true
         type: string
-
+      package_type:
+        description: Type of package to publish (deb or rpm)
+        required: true
+        type: choice
+        options:
+          - 'deb'
+          - 'rpm'
+      aws_repo_base_path:
+        description: Base S3 path for package repositories
+        required: true
+        type: string
+      cloudfront_distribution_id:
+        description: CloudFront Distribution ID for cache invalidation
+        required: true
+        type: string
+ 
 jobs:
   check-synchronization:
     uses: paritytech-release/sync-workflows/.github/workflows/check-synchronization.yml@main
     secrets:
-      fork_writer_app_key: ${{ secrets.UPSTREAM_CONTENT_SYNC_APP_KEY }}
+      fork_writer_app_key: ${{ secrets.upstream_content_sync_app_key }}
 
   validate-inputs:
     needs: [check-synchronization]
@@ -27,7 +39,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
         release_tag: ${{ steps.validate_inputs.outputs.release_tag }}
-
     steps:
       - name: Checkout sources
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
@@ -35,11 +46,10 @@ jobs:
       - name: Validate inputs
         id: validate_inputs
         run: |
+          # Source common library for helper functions
           . ./.github/scripts/common/lib.sh
-
           RELEASE_TAG=$(validate_stable_tag ${{ inputs.tag }})
           echo "release_tag=${RELEASE_TAG}" >> $GITHUB_OUTPUT
-
 
   fetch-artifacts-from-s3:
     runs-on: ubuntu-latest
@@ -49,7 +59,6 @@ jobs:
       VERSION: ${{ needs.validate-inputs.outputs.release_tag }}
     outputs:
       NODE_VERSION: ${{ steps.fetch_artifacts_from_s3.outputs.NODE_VERSION }}
-
     steps:
       - name: Checkout sources
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
@@ -58,36 +67,42 @@ jobs:
         id: fetch_artifacts_from_s3
         run: |
           . ./.github/scripts/common/lib.sh
-
           NODE_VERSION="$(get_polkadot_node_version_from_code)"
           echo "NODE_VERSION=${NODE_VERSION}" >> $GITHUB_OUTPUT
 
-          fetch_debian_package_from_s3 polkadot
+          # Fetch specific package type artifact (deb or rpm)
+          if [[ "${{ inputs.package_type }}" == "deb" ]]; then
+            fetch_debian_package_from_s3 polkadot
+          elif [[ "${{ inputs.package_type }}" == "rpm" ]]; then
+            # TODO: implement fetch_rpm_package_from_s3 polkadot
+          else
+            echo "Error: Unsupported package_type: ${{ inputs.package_type }}"
+            exit 1
+          fi
 
-      - name: Upload artifacts
+      - name: Upload artifacts for later jobs
         uses: actions/upload-artifact@5d5d22a31266ced268874388b861e4b58bb5c2f3 # v4.3.1
         with:
           name: release-artifacts
-          path: release-artifacts/polkadot/*.deb
+          path: release-artifacts/*
 
-  publish-deb-package:
+  publish-package:
     runs-on: ubuntu-latest
     needs: [fetch-artifacts-from-s3]
     environment: release
     env:
-      AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
-      AWS_DEB_PATH: "s3://releases-package-repos/deb"
-      LOCAL_DEB_REPO_PATH: ${{ github.workspace }}/deb
+      AWS_DEFAULT_REGION: ${{ secrets.aws_default_region }}
+      AWS_REPO_PATH: "${{ inputs.aws_repo_base_path }}/${{ inputs.package_type }}"
+      LOCAL_REPO_PATH: ${{ github.workspace }}/${{ inputs.package_type }}
       NODE_VERSION: ${{ needs.fetch-artifacts-from-s3.outputs.NODE_VERSION }}
 
     steps:
-      - name: Install pgpkkms
+      - name: Install pgpkms for artifact signing
         run: |
-          # Install pgpkms that is used to sign built artifacts
           python3 -m pip install "pgpkms @ git+https://github.com/paritytech-release/pgpkms.git@e7f806f99e9be5c52f0b4a536b7d4ef9c3e695ed"
           echo "PGPKMS_REPREPRO_PATH=$(which pgpkms-reprepro)" >> $GITHUB_ENV
 
-      - name: Install awscli
+      - name: Install awscli for S3 and CloudFront interaction
         run: |
           python3 -m pip install awscli
           which aws
@@ -95,60 +110,93 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
 
-      - name: Import gpg keys
+      - name: Import GPG keys using pgpkms
         shell: bash
         run: |
           . ./.github/scripts/common/lib.sh
-
           import_gpg_keys
 
-      - name: Download artifacts
+      - name: Download artifacts from previous job
         uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
         with:
           name: release-artifacts
           path: release-artifacts
 
       - name: Setup local deb repo
+        if: ${{ inputs.package_type == 'deb' }} # Condition for DEB setup
         run: |
+          sudo apt-get update
           sudo apt-get install -y reprepro
           which reprepro
 
+          # Configure reprepro to use pgpkms for signing
           sed -i "s|^SignWith:.*|SignWith: ! ${PGPKMS_REPREPRO_PATH}|" ${{ github.workspace }}/.github/scripts/release/distributions
 
-          mkdir -p ${{ github.workspace }}/deb/conf
-          cp ${{ github.workspace }}/.github/scripts/release/distributions ${{ github.workspace }}/deb/conf/distributions
-          cat ${{ github.workspace }}/deb/conf/distributions
+          # Create and copy distribution configuration for reprepro
+          mkdir -p "$LOCAL_REPO_PATH/conf"
+          cp ${{ github.workspace }}/.github/scripts/release/distributions "$LOCAL_REPO_PATH/conf/distributions"
+          cat "$LOCAL_REPO_PATH/conf/distributions"
 
-      - name: Sync local deb repo
-        env:
-          AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_RELEASE_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_RELEASE_SECRET_ACCESS_KEY }}
+      - name: Install Podman and createrepo for RPM
+        if: ${{ inputs.package_type == 'rpm' }} # Condition for RPM setup
         run: |
-          # Download the current state of the deb repo
-          aws s3 sync "$AWS_DEB_PATH/db" "$LOCAL_DEB_REPO_PATH/db"
-          aws s3 sync "$AWS_DEB_PATH/pool" "$LOCAL_DEB_REPO_PATH/pool"
-          aws s3 sync "$AWS_DEB_PATH/dists" "$LOCAL_DEB_REPO_PATH/dists"
+          # TODO
+
+      - name: Sync local repo (download from S3)
+        env:
+          AWS_ACCESS_KEY_ID:  ${{ secrets.aws_release_access_key_id }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_release_secret_access_key }}
+        run: |
+          mkdir -p "$LOCAL_REPO_PATH"
+          # Sync database and configuration files
+          aws s3 sync "$AWS_REPO_PATH/db" "$LOCAL_REPO_PATH/db" || true # `|| true` to avoid failing if dir doesn't exist yet
+          aws s3 sync "$AWS_REPO_PATH/conf" "$LOCAL_REPO_PATH/conf" || true # conf might not exist for RPM
+
+          if [[ "${{ inputs.package_type }}" == "deb" ]]; then
+            aws s3 sync "$AWS_REPO_PATH/pool" "$LOCAL_REPO_PATH/pool" || true
+            aws s3 sync "$AWS_REPO_PATH/dists" "$LOCAL_REPO_PATH/dists" || true
+          elif [[ "${{ inputs.package_type }}" == "rpm" ]]; then
+            # TODO
+          fi
 
       - name: Add deb package to local repo
+        if: ${{ inputs.package_type == 'deb' }} # Condition for adding DEB package
         env:
-          PGP_KMS_KEY:  ${{ secrets.PGP_KMS_KEY }}
-          PGP_KMS_HASH:  ${{ secrets.PGP_KMS_HASH }}
-          AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          PGP_KMS_KEY:  ${{ secrets.pgp_kms_key }}
+          PGP_KMS_HASH:  ${{ secrets.pgp_kms_hash }}
+          AWS_ACCESS_KEY_ID:  ${{ secrets.aws_release_access_key_id }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_release_secret_access_key }}
         run: |
-          # Add the new deb to the repo
-          reprepro -b "$LOCAL_DEB_REPO_PATH" includedeb "${{ inputs.distribution }}" "release-artifacts/polkadot_${NODE_VERSION}_amd64.deb"
+          # Find the downloaded .deb artifact
+          debname=$(find release-artifacts/ -name 'polkadot_*.deb' -print -quit)
+          if [ -z "$debname" ]; then
+            echo "Error: Debian package artifact not found in release-artifacts/"
+            exit 1
+          fi
+          echo "Found DEB package: $debname"
+          # Add the package to the local Debian repository
+          reprepro -b "$LOCAL_REPO_PATH" includedeb "${{ inputs.distribution }}" "$debname"
 
-      - name: Upload updated deb repo
+      - name: Add rpm package to local repo (Sign and Createrepo)
+        if: ${{ inputs.package_type == 'rpm' }} # Condition for adding RPM package
+        run: |
+          # TODO
+
+      - name: Upload updated repo to S3
         env:
-          AWS_ACCESS_KEY_ID:  ${{ secrets.AWS_RELEASE_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_RELEASE_SECRET_ACCESS_KEY }}
+          AWS_ACCESS_KEY_ID:  ${{ secrets.aws_release_access_key_id }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.aws_release_secret_access_key }}
         run: |
-          # Upload the updated repo - dists and pool should be publicly readable
-          aws s3 sync "$LOCAL_DEB_REPO_PATH/pool" "$AWS_DEB_PATH/pool" --acl public-read
-          aws s3 sync "$LOCAL_DEB_REPO_PATH/dists" "$AWS_DEB_PATH/dists" --acl public-read
-          aws s3 sync "$LOCAL_DEB_REPO_PATH/db" "$AWS_DEB_PATH/db"
-          aws s3 sync "$LOCAL_DEB_REPO_PATH/conf" "$AWS_DEB_PATH/conf"
+          if [[ "${{ inputs.package_type }}" == "deb" ]]; then
+            # For Debian, pool and dists directories need public-read ACL
+            aws s3 sync "$LOCAL_REPO_PATH/pool" "$AWS_REPO_PATH/pool" --acl public-read
+            aws s3 sync "$LOCAL_REPO_PATH/dists" "$AWS_REPO_PATH/dists" --acl public-read
+          elif [[ "${{ inputs.package_type }}" == "rpm" ]]; then
+            # TODO
+          fi
+          # db and conf directories typically don't need public-read
+          aws s3 sync "$LOCAL_REPO_PATH/db" "$AWS_REPO_PATH/db"
+          aws s3 sync "$LOCAL_REPO_PATH/conf" "$AWS_REPO_PATH/conf" || true # conf might not exist for RPM, so allow failure
 
-          # Invalidate caches to make sure latest files are served
-          aws cloudfront create-invalidation --distribution-id E36FKEYWDXAZYJ --paths '/deb/*'
+          # Invalidate CloudFront cache to serve latest files
+          aws cloudfront create-invalidation --distribution-id ${{ inputs.cloudfront_distribution_id }} --paths '/${{ inputs.package_type }}/*'
