--- a/.github/workflows/release-reusable-s3-upload.yml
+++ b/.github/workflows/release-reusable-s3-upload.yml
@@ -18,13 +18,13 @@ on:
         required: true
         type: string
 
-    secrets:
-      AWS_DEFAULT_REGION:
-        required: true
-      AWS_RELEASE_ACCESS_KEY_ID:
-        required: true
-      AWS_RELEASE_SECRET_ACCESS_KEY:
-        required: true
+    # secrets:
+    #   AWS_DEFAULT_REGION:
+    #     required: true
+    #   AWS_RELEASE_ACCESS_KEY_ID:
+    #     required: true
+    #   AWS_RELEASE_SECRET_ACCESS_KEY:
+    #     required: true
 
 jobs:
   upload-artifacts-to-s3:
