e2e test works well

--- a/substrate/frame/staking-async/ahm-test/Cargo.toml
+++ b/substrate/frame/staking-async/ahm-test/Cargo.toml
@@ -42,6 +42,7 @@ pallet-staking-async-ah-client = { workspace = true, default-features = true }
 pallet-timestamp = { workspace = true, default-features = true }
 # staking classic which will be replaced by ah-client
 pallet-root-offences = { workspace = true, default-features = true }
+pallet-offences = { workspace = true, default-features = true }
 pallet-staking = { workspace = true, default-features = true }
 
 [features]
@@ -62,6 +63,7 @@ try-runtime = [
 	"pallet-authorship/try-runtime",
 	"pallet-election-provider-multi-block/try-runtime",
 	"pallet-root-offences/try-runtime",
+	"pallet-offences/try-runtime",
 	"pallet-session/try-runtime",
 	"pallet-staking-async-ah-client/try-runtime",
 	"pallet-timestamp/try-runtime",
