rename and cleanup

--- a/.github/workflows/tests-linux-stable-xp.yml
+++ b/.github/workflows/tests-linux-stable-xp.yml
@@ -16,9 +16,9 @@ jobs:
   preflight:
     uses: ./.github/workflows/reusable-preflight.yml
 
-  # some tests do not run with `try-runtime` feature enabled
-  # https://github.com/paritytech/polkadot-sdk/pull/4251#discussion_r1624282143
-  test-linux-stable-no-try-runtime-full:
+  # No filter for 'all_security_features_work' and 'nonexistent_cache_dir'
+  # run all tests on cattery runners
+  test-linux-stable-no-try-runtime:
     needs: [preflight]
     if: ${{ needs.preflight.outputs.changes_rust }}
     runs-on: parity-large-test
@@ -47,7 +47,6 @@ jobs:
                    --no-fail-fast \
                    --features experimental,ci-only-tests \
                    --partition count:${{ matrix.partition }}
-      #              --filter-expr "test(/all_security_features_work/) + test(/nonexistent_cache_dir/)"
       # - name: Stop all workflows if failed
       #   if: ${{ failure() && steps.required.conclusion == 'failure' && !github.event.pull_request.head.repo.fork }}
       #   uses: ./.github/actions/workflow-stopper
@@ -93,34 +92,3 @@ jobs:
       - name: runtime-api tests
         if: ${{ matrix.partition == '1/3' }}
         run: forklift cargo nextest run -p sp-api-test --features enable-staging-api --cargo-quiet
-
-  # test-linux-stable-no-try-runtime-p:
-  #   needs: [preflight]
-  #   if: ${{ needs.preflight.outputs.changes_rust }}
-  #   runs-on: parity-large
-  #   timeout-minutes: 60
-  #   container:
-  #     image: ${{ needs.preflight.outputs.IMAGE }}
-  #   env:
-  #     RUST_TOOLCHAIN: stable
-  #     # Enable debug assertions since we are running optimized builds for testing
-  #     # but still want to have debug assertions.
-  #     RUSTFLAGS: "-Cdebug-assertions=y -Dwarnings"
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v4
-  #     - name: script
-  #       id: required
-  #       run: |
-  #         forklift cargo nextest run --workspace \
-  #                  --locked \
-  #                  --release \
-  #                  --no-fail-fast \
-  #                  --features experimental,ci-only-tests \
-  #                  --filter-expr "test(/all_security_features_work/) + test(/nonexistent_cache_dir/)"
-  #     - name: Stop all workflows if failed
-  #       if: ${{ failure() && steps.required.conclusion == 'failure' && !github.event.pull_request.head.repo.fork }}
-  #       uses: ./.github/actions/workflow-stopper
-  #       with:
-  #         app-id: ${{ secrets.WORKFLOW_STOPPER_RUNNER_APP_ID }}
-  #         app-key: ${{ secrets.WORKFLOW_STOPPER_RUNNER_APP_KEY }}
