chore: trigger comments to show yml

--- a/.github/workflows/release-50_publish-docker.yml
+++ b/.github/workflows/release-50_publish-docker.yml
@@ -1,3 +1,4 @@
+# Trigger comment
 name: Release - Publish Docker Image
 
 # This workflow listens to published releases or can be triggered manually.
