revive: Use global variables to handle incremental building
Signed-off-by: Alexandru Vasile <alexandru.vasile@parity.io>

--- a/substrate/frame/revive/Cargo.toml
+++ b/substrate/frame/revive/Cargo.toml
@@ -40,6 +40,7 @@ revm = { workspace = true }
 rlp = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
 serde = { features = ["alloc", "derive"], workspace = true, default-features = false }
+spin = { version = "0.10.0" }
 
 # Polkadot SDK Dependencies
 bn = { workspace = true }
