self review + vmp spamming infra

--- a/substrate/frame/staking-async/runtimes/papi-tests/zn-s.toml
+++ b/substrate/frame/staking-async/runtimes/papi-tests/zn-s.toml
@@ -7,7 +7,7 @@ name = "alice"
 validator = true
 rpc_port = 9944
 args = [
-	"-lruntime::system=debug,runtime::session=trace,runtime::staking-async::ah-client=trace,runtime::ah-client=debug",
+	"-lruntime::system=debug,runtime::session=trace,runtime::staking-async::ah-client=trace,runtime::ah-client=debug,xcm=trace",
 ]
 
 [[relaychain.nodes]]
