--- a/polkadot/runtime/parachains/Cargo.toml
+++ b/polkadot/runtime/parachains/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "polkadot-runtime-parachains"
-version = "19.2.0"
+version = "19.2.1"
 description = "Relay Chain runtime code responsible for Parachains."
 authors.workspace = true
 edition.workspace = true
@@ -55,18 +55,18 @@ xcm-executor.workspace = true
 xcm.workspace = true
 
 [dev-dependencies]
-polkadot-primitives = { features = ["test"], default-features = false, workspace = true }
+polkadot-primitives = { features = ["test"], default-features = false, path = "../../primitives" }
 
 assert_matches = { workspace = true }
-frame-support-test = { workspace = true }
+frame-support-test = { path = "../../../substrate/frame/support/test" }
 hex-literal = { workspace = true, default-features = true }
-polkadot-primitives-test-helpers = { workspace = true }
+polkadot-primitives-test-helpers = { path = "../../primitives/test-helpers" }
 rstest = { workspace = true }
-sc-keystore = { default-features = true, workspace = true }
+sc-keystore = { default-features = true, path = "../../../substrate/client/keystore" }
 serde_json = { workspace = true, default-features = true }
-sp-crypto-hashing = { default-features = true, workspace = true }
-sp-keyring = { default-features = true, workspace = true }
-sp-tracing = { default-features = true, workspace = true }
+sp-crypto-hashing = { default-features = true, path = "../../../substrate/primitives/crypto/hashing" }
+sp-keyring = { default-features = true, path = "../../../substrate/primitives/keyring" }
+sp-tracing = { default-features = true, path = "../../../substrate/primitives/tracing" }
 thousands = { workspace = true }
 
 [features]
@@ -114,7 +114,6 @@ std = [
 ]
 runtime-benchmarks = [
 	"frame-benchmarking/runtime-benchmarks",
-	"frame-support-test/runtime-benchmarks",
 	"frame-support/runtime-benchmarks",
 	"frame-system/runtime-benchmarks",
 	"pallet-babe/runtime-benchmarks",
@@ -135,7 +134,6 @@ runtime-benchmarks = [
 	"xcm/runtime-benchmarks",
 ]
 try-runtime = [
-	"frame-support-test/try-runtime",
 	"frame-support/try-runtime",
 	"frame-system/try-runtime",
 	"pallet-authority-discovery/try-runtime",
