more work on vmp spamming demonstration

--- a/substrate/frame/staking-async/runtimes/preset-store/Cargo.toml
+++ b/substrate/frame/staking-async/runtimes/preset-store/Cargo.toml
@@ -14,6 +14,7 @@ repository.workspace = true
 codec = { workspace = true }
 frame = { workspace = true, features = ["runtime"] }
 scale-info = { workspace = true }
+pallet-staking-async-ah-client = { workspace = true }
 
 [features]
 default = ["std"]
@@ -21,4 +22,5 @@ std = [
 	"codec/std",
 	"frame/std",
 	"scale-info/std",
+	"pallet-staking-async-ah-client/std"
 ]
